"""Init database

Revision ID: ccb434d114ea
Revises: 
Create Date: 2025-06-25 15:39:14.296873

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'ccb434d114ea'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('users',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('login', sa.String(length=100), nullable=False),
    sa.Column('password', sa.String(length=255), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=True),
    sa.Column('oauth_id', sa.String(length=255), nullable=True),
    sa.Column('first_name', sa.String(length=100), nullable=True),
    sa.Column('last_name', sa.String(length=100), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('role', sa.Enum('SUPERUSER', 'ADMIN', 'USER', name='userroleenum'), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('country', sa.String(length=100), nullable=False),
    sa.Column('partition_country', sa.String(length=10), nullable=False),
    sa.PrimaryKeyConstraint('id', 'partition_country'),
    sa.UniqueConstraint('email', 'partition_country'),
    sa.UniqueConstraint('id', 'partition_country'),
    sa.UniqueConstraint('login', 'partition_country'),
    sa.UniqueConstraint('oauth_id', 'partition_country'),
    schema='auth',
    postgresql_partition_by='LIST (partition_country)'
    )
    op.create_table('login_history',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('login_time', sa.DateTime(timezone=True), nullable=False),
    sa.Column('user_agent', sa.String(length=512), nullable=False),
    sa.Column('user_device_type', sa.String(length=20), nullable=False),
    sa.Column('partition_country', sa.String(length=10), nullable=False),
    sa.ForeignKeyConstraint(['user_id', 'partition_country'], ['auth.users.id', 'auth.users.partition_country'], onupdate='CASCADE', ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', 'user_device_type'),
    sa.UniqueConstraint('id', 'user_device_type'),
    schema='auth',
    postgresql_partition_by='LIST (user_device_type)'
    )
    op.create_table('social_accounts',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('provider', sa.String(length=50), nullable=False),
    sa.Column('oauth_id', sa.String(length=255), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=True),
    sa.Column('username', sa.String(length=255), nullable=True),
    sa.Column('linked_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('partition_country', sa.String(length=10), nullable=False),
    sa.ForeignKeyConstraint(['user_id', 'partition_country'], ['auth.users.id', 'auth.users.partition_country'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('provider', 'oauth_id', name='uq_provider_oauth_id'),
    schema='auth'
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('social_accounts', schema='auth')
    op.drop_table('login_history', schema='auth')
    op.drop_table('users', schema='auth')
    # ### end Alembic commands ###
